# not-locking

./: Cargo.toml  README.md  not-locking.exe.manifest
.github/workflows/: release.yml
src/: main.rs
