[package]
name = "not-locking"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = [
    "Win32_System_Power",
    "Win32_UI_Input_KeyboardAndMouse"
] }
windows-sys = { version = "0.48", features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Foundation"
] }
winreg = "0.10"
